@@ -6,6 +6,8 @@
 	actually need it.  Account 'Number' methods and dictionary keys changed
 	to be account 'ID' instead ... in accordance with MacOS-X usage.
 	Documented the class.
+	* Source/NSData.m: ([-writeToFile:atomically:]) implement workaround
+	for bug in windoze implementation of rename()
 
 2002-09-15  Richard Frith-Macdonald <rfm@gnu.org>
 
